--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <h4 class="yesterday">Yesterday</h4>
 
-<img class="banner" src="images/Banner.png">
+<img class="banner" src="Images/Banner.png">
 
 <h1>September 27th, 2024</h1>
 
@@ -22,7 +22,7 @@
   Hurricane Helene Claims First Life as It Slams into Florida
 </h2>
 
-<img class="hurricane" src="images/hurricane.png">
+<img class="hurricane" src="Images/hurricane.png">
 
 <p class="first-article">
   Hurricane Helene made landfall in Taylor County as a Category 4 storm, killing one<br>
@@ -50,7 +50,7 @@
 </p>
 
 
-<img class="flood" src="images/flood.png">
+<img class="flood" src="Images/flood.png">
 
 <h2>Man Dies After Being Shot and Crashing Into Home in East Tampa</h2>
 
